<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/register_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
        />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:id="@+id/username"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_username"
            android:textSize="20sp"
            android:inputType="text"
            android:textColor="@color/white"
        />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:id="@+id/email"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
        />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:id="@+id/phoneNum"
            android:layout_marginTop="15dp"
            android:hint="@string/phone_number"
            android:textSize="20sp"
            android:inputType="phone"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_password"
            android:textSize="20sp"
            android:inputType="textPassword"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:id="@+id/btn_register"
            android:text="@string/register_btn"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
        />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@mipmap/chatlogo"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>