<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:id="@+id/linear_layout">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@color/pink"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/linear_layout"
        android:background="@color/pink"/>

</RelativeLayout>