<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication">

    <VideoView
        android:id="@+id/bgVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:id="@+id/title"
        android:textColor="@color/white"
    />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:id="@+id/loginBtn"
        android:textSize="20sp"
    />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="230dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:id="@+id/signUpBtn"
        android:textSize="20sp"
    />

</RelativeLayout>