<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/profile_toolbar"
        android:id="@+id/bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uName"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/pink"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/hint_username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_username"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameField"
            android:text="@string/hint_username"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"
            android:contentDescription="@string/hint_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:text="@string/hint_email"
            android:layout_marginStart="58dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/outlined_btn"
            android:text="@string/edit_profile"
            android:gravity="center"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:drawableLeftCompat="@drawable/ic_edit"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/outlined_btn"
            android:text="@string/change_password"
            android:gravity="center"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:drawableLeftCompat="@drawable/ic_lock" />

    </LinearLayout>

</LinearLayout>